# ray_tracer_challenge

./: .gitignore  CMakeLists.txt  README.md  ray_tracer_challenge.sln  ray_tracer_challenge.vcxproj  ray_tracer_challenge.vcxproj.filters
input/: ch_02_demo_input  ch_07_input.json  ch_09_input.json  ch_10_input_stripe.json  ch_11_input_glass_sphere_hollow_center.json  ch_11_input_reflective_floor.json
lib/: CMakeLists.txt
output/: ch_04_output.ppm  ch_06_output.ppm  ch_09_output.ppm  ch_10_output_stripe.ppm  ch_11_output_glass_sphere_hollow_center.ppm
ray_tracer_tests/: ray_tracer_tests.vcxproj
src/: CMakeLists.txt  main.cpp  point.cpp  point.hpp  point.test.cpp  vector.cpp  vector.hpp
src/demos/ch_01/: ch_01.cpp
src/demos/ch_02/: ch_02.cpp
src/demos/ch_04/: ch_04.cpp
src/demos/ch_05/: ch_05.cpp
src/gfx/: canvas.hpp  canvas.test.cpp  color.cpp  color.hpp  color.test.cpp  matrix2.cpp  matrix2.hpp  matrix2.test.cpp  matrix3.cpp  matrix3.hpp  matrix3.test.cpp  matrix4.cpp  matrix4.hpp  matrix4.test.cpp  point.cpp  point.hpp  point.test.cpp  transform.hpp  transform.test.cpp  vector.cpp  vector.hpp  vector.test.cpp  vector4.cpp  vector4.hpp  vector4.test.cpp
src/gfx/data_structures/: canvas.cpp  color.cpp  color.hpp  color.test.cpp  matrix2.test.cpp  matrix3.cpp  matrix3.hpp  matrix4.cpp  matrix4.hpp  matrix4.test.cpp  vector4.cpp  vector4.hpp  vector4.test.cpp
src/gfx/functions/: transform.cpp  transform.hpp  transform.test.cpp
src/gfx/geometry/: intersection.cpp  intersection.hpp  intersection.test.cpp  ray.cpp  ray.hpp  ray.test.cpp  sphere.cpp  sphere.hpp  sphere.test.cpp  world.cpp  world.hpp  world.test.cpp
src/gfx/rendering/: camera.test.cpp  canvas.cpp  canvas.hpp  canvas.test.cpp  material.cpp  material.test.cpp  rendering.test.cpp  rendering_functions.cpp  shading.test.cpp  shading_functions.cpp  shading_functions.hpp
src/gfx/shading/: camera.cpp  camera.hpp  camera.test.cpp  light.hpp  material.hpp  rendering.test.cpp  rendering_functions.cpp  shading.test.cpp  shading_functions.cpp  shading_functions.hpp
src/gfx/utils/: util_functions.cpp
src/graphics/data_structures/: color.cpp  color.hpp  color.test.cpp  matrix2.cpp  matrix2.hpp  matrix3.cpp  matrix3.hpp  matrix3.test.cpp  matrix4.cpp  matrix4.hpp  matrix4.test.cpp  vector3.cpp  vector3.hpp  vector3.test.cpp  vector4.cpp  vector4.hpp  vector4.test.cpp
src/graphics/functions/: linear_algebra.cpp  linear_algebra.hpp  linear_algebra.test.cpp  transform.cpp  transform.hpp  transform.test.cpp
src/graphics/geometry/: bounding_box.cpp  bounding_box.hpp  bounding_box.test.cpp  composite_surface.cpp  composite_surface.hpp  composite_surface.test.cpp  group.cpp  group.hpp  group.test.cpp  intersection.cpp  intersection.hpp  intersection.test.cpp  object.cpp  object.hpp  object.test.cpp  ray.cpp  ray.hpp  ray.test.cpp  sphere.hpp  sphere.test.cpp  world.cpp  world.hpp  world.test.cpp
src/graphics/geometry/shapes/: cone.cpp  cone.hpp  cone.test.cpp  cube.cpp  cube.hpp  cube.test.cpp  cylinder.cpp  cylinder.hpp  cylinder.test.cpp  group.cpp  group.hpp  plane.cpp  plane.hpp  plane.test.cpp  shape.cpp  shape.hpp  shape.test.cpp  sphere.cpp  sphere.hpp  sphere.test.cpp  surface.cpp  surface.hpp  surface.test.cpp  triangle.cpp  triangle.hpp  triangle.test.cpp
src/graphics/geometry/surfaces/: cone.test.cpp  cube.test.cpp  cylinder.test.cpp  plane.test.cpp  sphere.cpp  sphere.hpp  sphere.test.cpp  surface.cpp  surface.hpp  surface.test.cpp  triangle.cpp  triangle.test.cpp
src/graphics/shading/: material.cpp  material.hpp  material.test.cpp  shading.test.cpp  shading_functions.cpp  shading_functions.hpp
src/graphics/shading/patterns/: checkered_pattern.cpp  checkered_pattern.hpp  gradient_pattern.cpp  gradient_pattern.hpp  gradient_pattern.test.cpp  pattern.hpp  pattern.test.cpp  ring_pattern.cpp  ring_pattern.hpp  stripe_pattern.cpp  stripe_pattern.hpp  stripe_pattern.test.cpp  two_tone_pattern.hpp  two_tone_pattern.test.cpp
src/graphics/shading/textures/: color_texture.hpp  texture.cpp  texture.hpp  texture.test.cpp  texture_map.cpp  texture_map.hpp  texture_map.test.cpp
src/graphics/shading/textures/procedural_textures/: color_texture.cpp  color_texture.hpp  gradient_texture.cpp  gradient_texture.hpp  gradient_texture_3d.cpp  gradient_texture_3d.hpp  procedural_texture.cpp  procedural_texture.hpp  procedural_texture.test.cpp  texture_3d.cpp
src/graphics/shading/textures/procedural_textures/patterns/: checkered_pattern.cpp  checkered_pattern.hpp  checkered_pattern_3d.cpp  checkered_pattern_3d.hpp  pattern.hpp  pattern.test.cpp  pattern_texture.test.cpp  pattern_texture_3d.hpp  ring_pattern.cpp  ring_pattern.hpp  ring_pattern_3d.cpp  ring_pattern_3d.hpp  stripe_pattern.cpp  stripe_pattern.hpp  stripe_pattern_3d.cpp  stripe_pattern_3d.hpp
src/graphics/utils/: util_functions.cpp  util_functions.hpp
src/ray_tracer/: ray_tracer.cpp
src/ray_tracer/data_handling/: parse.cpp  parse.hpp  parse.test.cpp
src/ray_tracer/rendering/: camera.cpp  camera.hpp  camera.test.cpp  canvas.cpp  canvas.hpp  canvas.test.cpp  rendering.test.cpp  rendering_functions.cpp  rendering_functions.hpp
src/utils/: util_functions.cpp  util_functions.hpp
tests/: CMakeLists.txt  ch_01_demo_input  tests.vcxproj
